--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,5 @@
 {% extends "base.html" %}
-
 {% block content %}
-<p>Welcome to the Music & Mental Health Insights Tool.</p>
-<p>
-    Use the navigation links above to explore:
-</p>
-<ul>
-    <li>Average anxiety and depression by favourite genre</li>
-    <li>Streaming service usage counts</li>
-    <li>Listening duration vs average anxiety</li>
-</ul>
+<h1>Music & Mental Health Insights</h1>
+<p>Explore listening habits and wellbeing statistics.</p>
 {% endblock %}
