--- a/templates/streaming.html
+++ b/templates/streaming.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Streaming service usage</h2>
+<h1>Streaming service usage</h1>
+<p>Counts are derived from the current dataset.</p>
 
 <table border="1">
     <thead>
