--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Music & Mental Health Insights</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
   </head>
   <body>
     <nav>
