--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
       <a href="{{ url_for('streaming_counts') }}">Streaming usage</a> |
       <a href="{{ url_for('hours_vs_anxiety') }}">Hours vs anxiety</a> |
       <a href="{{ url_for('data_quality') }}">Data quality</a> |
+      <a href="{{ url_for('export_page') }}">Export data</a> |
       <a href="{{ url_for('export_streaming_csv') }}">Download streaming CSV</a>
     </nav>
     <main>
